大枠のフレーム完成

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>個人家計簿</h1>
+    <div class="page_header">
+        <h1>個人家計簿</h1>
+        <h2>～ホーム～</h2>
+    </div>
     <div class="container">
         <nav class="menu-bar">
+            <h1>メニュー</h1>
             <ul>
                 <li><a href="#">ホーム</a></li>
                 <li><a href="#">支出入力</a></li>
