--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 </head>
 <body>
     <div class="page_header">
+        <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
         <h1>個人家計簿</h1>
         <h2>～ホーム～</h2>
     </div>
     <div class="container">
-        <nav class="menu-bar">
+        <nav class="menu-bar" id="sidebar">
             <h1>メニュー</h1>
             <ul>
                 <li><a href="#">ホーム</a></li>
@@ -25,5 +26,6 @@
         </div>
     </div>
     <footer>最終更新日:</footer>
+    <script src="scripts.js"></script> <!-- JavaScriptを読み込む -->
 </body>
 </html>
