サイドバー機能を全ページに実装

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h1>メニュー</h1>
             <ul>
                 <li><a href="#">ホーム</a></li>
-                <li><a href="#">支出入力</a></li>
-                <li><a href="#">支出分析</a></li>
+                <li><a href="input.html">支出入力</a></li>
+                <li><a href="analysis.html">支出分析</a></li>
             </ul>
         </nav>
         <div class="graph-area">
