--- a/analysis.html
+++ b/analysis.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>個人家計簿</title>
+    <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -11,11 +12,11 @@
         <h2>～支出分析～</h2>
     </div>
     <div class="container">
-        <nav class="menu-bar">
+        <nav class="menu-bar" id="sidebar">
             <h1>メニュー</h1>
             <ul>
-                <li><a href="#">ホーム</a></li>
-                <li><a href="#">支出入力</a></li>
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="input.html">支出入力</a></li>
                 <li><a href="#">支出分析</a></li>
             </ul>
         </nav>
@@ -25,5 +26,6 @@
         </div>
     </div>
     <footer>最終更新日:</footer>
+    <script src="scripts.js"></script> <!-- JavaScriptを読み込む -->
 </body>
 </html>
