--- a/input.html
+++ b/input.html
@@ -7,16 +7,17 @@
 </head>
 <body>
     <div class="page_header">
+        <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
         <h1>個人家計簿</h1>
         <h2>～支出入力～</h2>
     </div>
     <div class="container">
-        <nav class="menu-bar">
+        <nav class="menu-bar" id="sidebar">
             <h1>メニュー</h1>
             <ul>
-                <li><a href="#">ホーム</a></li>
+                <li><a href="index.html">ホーム</a></li>
                 <li><a href="#">支出入力</a></li>
-                <li><a href="#">支出分析</a></li>
+                <li><a href="analysis.html">支出分析</a></li>
             </ul>
         </nav>
         <div class="graph-area">
@@ -25,5 +26,6 @@
         </div>
     </div>
     <footer>最終更新日:</footer>
+    <script src="scripts.js"></script> <!-- JavaScriptを読み込む -->
 </body>
 </html>
