--- a/input.html
+++ b/input.html
@@ -5,26 +5,30 @@
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body data-page="input">
     <div class="page_header">
         <button id="menu-toggle">&#9776;</button> <!-- ハンバーガーメニューのボタン -->
         <h1>個人家計簿</h1>
         <h2>～支出入力～</h2>
     </div>
+
+    <!-- 🚀 .container の外に移動 -->
+    <nav class="menu-bar" id="sidebar">
+        <h1>メニュー</h1>
+        <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="input.html">支出入力</a></li>
+            <li><a href="analysis.html">支出分析</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        <nav class="menu-bar" id="sidebar">
-            <h1>メニュー</h1>
-            <ul>
-                <li><a href="index.html">ホーム</a></li>
-                <li><a href="#">支出入力</a></li>
-                <li><a href="analysis.html">支出分析</a></li>
-            </ul>
-        </nav>
         <div class="graph-area">
             <h2>支出・収入のグラフ</h2>
             <canvas id="expenseChart"></canvas> <!-- グラフ用のCanvas -->
         </div>
     </div>
+
     <footer>最終更新日:</footer>
     <script src="scripts.js"></script> <!-- JavaScriptを読み込む -->
 </body>
