input.htmlを修正とstyle.cssを修正

--- a/input.html
+++ b/input.html
@@ -23,9 +23,11 @@
     </nav>
 
     <div class="container">
-        <div class="graph-area">
-            <h2>支出・収入のグラフ</h2>
-            <canvas id="expenseChart"></canvas> <!-- グラフ用のCanvas -->
+        <div class="input-form">
+            <h2>入力フォーム</h2>
+        </div>
+        <div class="data-table">
+            <h2>データベース</h2>
         </div>
     </div>
 
